@@ -34,17 +34,16 @@ Web Document Conformance Checker (BETA)</title>
 
 <div class="section tokenize-error" id="bare-ero"><h3>The <code>&amp;</code> character must
   introduce a reference.</h3>
-    <p>An <code>&amp;</code> (<code>U+0026</code>
-    <code class="charname">AMPERSAND</code>) character which
+    <p>An <code>&amp;</code> character which
     is not part of any reference appears in the input stream.
-    The document is non-conforming.</p>
+    The document is non‐conforming.</p>
 
-    <p><strong>Any <code>&amp;</code> character in URI (or IRI)
-    must be escaped as <code>&amp;amp;</code>.</strong></p>
+    <p><em>Any <code>&amp;</code> character in URI (or IRI)
+    must be escaped as <code class="example">&amp;amp;</code>.</em></p>
 
     <p>The <code>&amp;</code> character must
     be the first character of a reference:
-      <dl>
+      <dl class="switch">
       <dt>Named entity reference</dt>
           <dd><pre class="html example">
 <code>&amp;<var>entity-name</var>;</code></pre>
@@ -114,7 +113,7 @@ Web Document Conformance Checker (BETA)</title>
 
     <p>The string <code>&amp;#</code> must be the first two characters
     of a reference:
-      <dl>
+      <dl class="switch">
       <dt>Numeric character reference</dt>
           <dd><pre class="html example">
 <code>&amp;#<var>d</var>;</code></pre>
@@ -166,20 +165,22 @@ Web Document Conformance Checker (BETA)</title>
 
     <dl class="switch">
     <dt>Comments</dt>
-      <dd>In HTML documents, comments must be introduced by
-      <code>&lt;!--</code> (<code>&lt;!</code> <em>immediately</em> followed
+      <dd>In HTML document, comments must be introduced by
+      <code class="example">&lt;!--</code> (<code>&lt;!</code>
+      <em>immediately</em> followed
       by <em>two</em> <code>-</code>s) and must be terminated by
-      <code>--&gt;</code>.  Strings <code>&lt;!</code> not followed
+      <code class="example">--&gt;</code>.
+      Strings <code>&lt;!</code> not followed
       by <code>--</code> and <code>&lt;!-</code> not followed by
       <code>-</code> are not valid open delimiters for comments.</dd>
     <dt>Marked sections, including <code>CDATA</code> sections</dt>
-      <dd>Marked sections are not allowed in HTML documents.</dd>
+      <dd>Marked sections are not allowed in HTML document.</dd>
     <dt>Markup declarations</dt>
-      <dd>Markup declarations, except <code>DOCTYPE</code>
-      and comment declarations, are not allowed in HTML documents.</dd>
+      <dd>Markup declarations, except for <code>DOCTYPE</code>
+      and comment declarations, are not allowed in HTML document.</dd>
     <dt>String <code>&lt;!</code></dt>
       <dd>String <code>&lt;!</code> must be escaped as
-      <code>&amp;lt;!</code>.</dd>
+      <code class="example">&amp;lt;!</code>.</dd>
     </dl>
   </div>
 
@@ -239,7 +240,8 @@ Web Document Conformance Checker (BETA)</title>
     <dt><code>&lt;script/&gt;</code></dt>
         <dd><p>The polytheistic slash cannot be used for <code>script</code>
         element.  Even for an empty <code>script</code> element,
-        there must be an explicit end tag <code>&lt;/script&gt;</code>.</p>
+        there must be an explicit end tag
+        <code class="html example">&lt;/script&gt;</code>.</p>
 
         <p><strong>NOTE</strong>: Though some user agents interpret
         polytheistic slash for <code>script</code> element as the 
@@ -256,7 +258,11 @@ Web Document Conformance Checker (BETA)</title>
         to allow polytheistic slash for these elements.</dd>
     <dt><code>&lt;a/&gt;</code>, <code>&lt;p/&gt;</code></dt>
         <dd>These elements are not always empty and therefore
-        polytheistic slash is not allowed.</dd>
+        polytheistic slash is not allowed.  Use explicit end tag
+        to represent empty element as:
+          <pre class="example html">
+<code>&lt;p&gt;&lt;/p&gt;</code></pre>
+        </dd>
     </dl>
 
     <p>Note that, unlike in XML, the polytheistic slash has
@@ -277,7 +283,14 @@ Web Document Conformance Checker (BETA)</title>
       <dd>An <abbr>XBL</abbr> binding cannot be associated by 
       <abbr title="processing instruction">PI</abbr> in <abbr>HTML</abbr>
       document.  Use <code>binding</code> property in <abbr>CSS</abbr>
-      style sheet.</dd>
+      style sheet as:
+        <pre class="html example">
+<code>&lt;style&gt;
+p {
+  binding: url(binding.xbl);
+}
+&lt;/style&gt;</code></pre>
+      </dd>
     <dt><code>&lt;?xml?&gt;</code> (XML declaration)</dt>
         <dd>XML declaration is unnecessary for HTML documents.</dd>
     <dt><code>&lt;?xml-stylesheet?&gt;</code> (XML style sheet
@@ -285,7 +298,10 @@ Web Document Conformance Checker (BETA)</title>
         <dd>Use HTML <code>link</code> element with <code>rel</code>
         attribute set to <code>stylesheet</code> (or,
         <code>alternate stylesheet</code> for an alternate style 
-        sheet).</dd>
+        sheet).
+          <pre class="example html">
+<code>&lt;link rel=stylesheet href=&quot;path/to/stylesheet.css&quot;&gt;</code></pre>
+        </dd>
     <dt><code>&lt;?php?&gt;</code> or 
     <code>&lt;? <var>... <abbr>PHP</abbr> code ...</var> ?&gt;</code> 
     (<abbr>PHP</abbr> code)</dt>
@@ -425,7 +441,7 @@ Web Document Conformance Checker (BETA)</title>
       <dd>Though the element is void in earlier versions of Safari,
       the <code>canvas</code> element is <em>no</em> longer
       defined as empty.  There must be an end tag
-      <code>&lt;/canvas&gt;</code>.</dd>
+      <code class="html example">&lt;/canvas&gt;</code>.</dd>
     </dl>
 
     <p>Note that misnesting tags, such as 
@@ -451,7 +467,8 @@ Web Document Conformance Checker (BETA)</title>
   HTML.</h3>
     <p>The document contains a <code>DOCTYPE</code> declaration
     that is different from HTML5 <code>DOCTYPE</code> (i.e. 
-    <code>&lt;!DOCTYPE HTML&gt;</code>).  The document is non-conforming.</p>
+    <code class="example html">&lt;!DOCTYPE HTML&gt;</code>).
+    The document is non‐conforming.</p>
 
     <p>The document might or might not be conformant to
     some version of HTML.  However, conformance to any HTML
@@ -563,11 +580,11 @@ Web Document Conformance Checker (BETA)</title>
                   block-level content, any inline-level content must be
                   put in e.g. paragraph element such as <code>p</code>.</p>
                   <p>For example, an HTML document fragment
-                  <code class="bad example">&lt;div&gt;&lt;p&gt;Hello!&lt;/p&gt; World!&lt;/div&gt;</code>
+                  <code class="html bad example">&lt;div&gt;&lt;p&gt;Hello!&lt;/p&gt; World!&lt;/div&gt;</code>
                   is non-conforming, since a word <q>World!</q> does not belong
                   to any paragraph.  (If not part of any paragraph, what is
                   it!?)  A conforming example would be:
-                    <pre class="example">
+                    <pre class="html example">
 <code>&lt;div&gt;&lt;p&gt;Hello!&lt;/p&gt; &lt;p&gt;World!&lt;/p&gt;&lt;/div&gt;</code></pre>
                   </p></dd>
               <dt>If the parent element does <em>not</em> allow 
@@ -608,18 +625,21 @@ Web Document Conformance Checker (BETA)</title>
 
     <dl class="switch">
     <dt><code>html</code> element in an XHTML document</dt>
-        <dd><p>In an XHTML document, the root <code>html</code>
-        element must have an <code>xmlns</code> attribute
-        whose value is set to 
-        <code>http://www.w3.org/1999/xhtml</code>.</p></dd>
+        <dd><p>In <abbr>XHTML</abbr> document, the root <code>html</code>
+        element must have an <code>xmlns</code> attribute as:
+          <pre class="xml example">
+<code>&lt;html xmlns=&quot;http://www.w3.org/1999/xhtml&quot;&gt;</code></pre></p></dd>
     <dt><code>rss</code> element</dt>
         <dd><p>The document is written in some version of RSS.</p>
         <p>The conformance checker does not support any version
         of RSS.  Use Atom 1.0 for feed documents.</p></dd>
     <dt><code>feed</code> element</dt>
         <dd><p>The Atom <code>feed</code> element must be
-        in the <code>http://www.w3.org/2004/Atom</code>
-        namespace.</p>
+        in the <code>http://www.w3.org/2005/Atom</code>
+        namespace as:
+          <pre class="xml example">
+<code>&lt;feed xmlns=&quot;http://www.w3.org/2005/Atom&quot;&gt;</code></pre>
+        </p>
         <p>The conformance checker does not support Atom 0.3.
         Use Atom 1.0 for feed documents.</p></dd>
     </dl>
@@ -744,8 +764,8 @@ Web Document Conformance Checker (BETA)</title>
 
     <dl>
     <dt>HTML <code>meta</code> element, <code>http-equiv</code> attribute</dt>
-        <dd><p>Only <code>Default-Style</code> and <code>Refresh</code>
-        is allowed.</p>
+        <dd><p>Only values <code>Default-Style</code> and <code>Refresh</code>
+        are allowed.</p>
         <p>Value <code>Content-Type</code> is obsolete; for charset
         declaration, the <code>charset</code> attribute can be used as:
         <pre class="html example">
@@ -764,14 +784,14 @@ Web Document Conformance Checker (BETA)</title>
   </div>
 
 <div class="section attribute-value-error" id="enumerated:invalid:http-equiv:content-type"><h3>Charset declaration syntax
-  <code>&lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=<var>charset-name</var>&quot;&gt;</code>
+  <code class="html bad example">&lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=<var>charset-name</var>&quot;&gt;</code>
   is obsolete.</h3>
     <p>Old long charset declaration syntax
-    <code>&lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=<var>charset-name</var>&quot;&gt;</code>
+    <code class="html bad example">&lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=<var>charset-name</var>&quot;&gt;</code>
     is in use.  The document is non‐conforming.</p>
 
     <p>The new charset declaration syntax is:
-      <pre>
+      <pre class="html example">
 <code>&lt;meta charset=&quot;<var>charset-name</var>&quot;&gt;</code></pre>
     </p>
   </div>
@@ -869,7 +889,7 @@ Web Document Conformance Checker (BETA)</title>
     The document is non-conforming.</p>
 
     <p>For example, the table below is non-conforming:
-      <pre class="html non-conforming example">
+      <pre class="html bad example">
 <code>&lt;table&gt;
 &lt;tbody&gt;
 &lt;tr&gt;&lt;td rowspan=2&gt;&lt;/td&gt;&lt;/tr&gt;
@@ -976,7 +996,8 @@ Web Document Conformance Checker (BETA)</title>
     <code>text/cache-manifest</code> must contain a cache manifest.</p>
 
     <p>A cache manifest must start with a line whose content is 
-    <code>CACHE MANIFEST</code> (exactly one space character between
+    <code class="manifest example">CACHE MANIFEST</code>
+    (exactly one space character between
     <code>CACHE</code> and <code>MANIFEST</code>).</p>
   </div>
 </section>
@@ -1093,6 +1114,6 @@ is used in the document.</td>
 and/or modify it under the same terms as Perl itself.</p>
 </section>
 
-<!-- $Date: 2007/11/07 11:29:46 $ -->
+<!-- $Date: 2007/11/07 12:20:44 $ -->
 </body>
 </html>
