@@ -1,5 +1,9 @@
 2007-11-07  Wakaba  <wakaba@suika.fam.cx>
 
+	* cc-style.css: Styling examples.
+
+2007-11-07  Wakaba  <wakaba@suika.fam.cx>
+
 	* error-description-source.xml (enumerated:invalid:http-equiv:content-type):
 	New.
 
